Agregamos las primeras funciones del programa, y terminamos de agregar el sistema

--- a/Game Level 1/pong/Documentation/2025-01-06.md
+++ b/Game Level 1/pong/Documentation/2025-01-06.md
@@ -22,3 +22,12 @@ Listo, una vez completado ésto, podrás continuar, nada más procura reimportar
 
 Creamos un objeto del mapa y el objeto del balón como tal, al objeto del balón como tal empezaremos creando un **sprite, y un collision shape, mientras que el balón es un Node2D** para iniciar, para el caso del mapa o main será el siguiente: **El main es un Node, un Texture Rect e instanciamos el objeto del Balón**, luego, creamos el objeto paleta, éste siendo **un Node2D, con un Sprite2D y colisión, luego de ésto lo que debemos de cumplir o hacer es implementar el movimiento, además de crear una clase hijo de jugador, segundo jugador, y de IA**.
 
+## Scripts iniciales para control de movimiento e importaciones
+
+Acá creamos como tal funciones iniciales que se encargan de controlar los movimientos como tal, por ejemplo, creamos el script de **MoveComponent**, con el cual tomamos el objeto padre al cual aplicar el movimiento y un valor de velocidad dado, y base a dicho valor de velocidad, trasladamos la posición. (*Cabe destacar que la velocidad es un Vector2(velocidad x, velocidad y)*).
+
+Creamos también un **Control de Inputs o MoveInputComponent**, para manejar los inputs de jugadores 1 y 2, también creamos single tones:  **GameStats para guardar las puntuaciones entre jugadores y el modo de juego, o el MovementStats para estimar la velocidad del balón y de la paleta**.
+
+También manejamos el sistema de control de choques de paleta al llegar a los bordes como tal, con el **PosControlComponent**. Con base a éstos, dejamos los avances del día.
+
+Finalmente, y para último cambio del día actual, lo que se realizó fueron cambios en el archivo, de modo tal que haya chequeo por rebote a la paleta y la pared al suelo, llamado **BounceComponent y el CambiarDireccion**.
