Modificamos la documentacion y aplicamos el movimiento del balon

--- a/Game Level 2/breakout/Documentation/2025-02-18.md
+++ b/Game Level 2/breakout/Documentation/2025-02-18.md
@@ -19,13 +19,21 @@ Luego de haber asignado el **Main Scene** para pruebas, hacemos un componente pa
 
 Luego de investigar con ***DeepSeek*** sin embargo, me di cuenta que sí es mejor usar éste *approach*, debido al método que uso para el movimiento del jugador y del balón, y debido también a que la manera de hacer que el balón rebote será diferente, aunque no lo pueda reusar, es mejor tener 2 componentes distintos de ésta clase.
 
-Al final, decidimos hacer 3 layers en vez de 2, tenemos **Player, Ball, Bricks**, y en los ladrillos hacemos que esperen a que alguien entre en su área para apagarlos o destruirlos como tal. En resumen, si un balón entra en su área de colisión, hacemos un **queue_free()** y llamaríamos al método de balón para que **rebote**.
+Al final, decidimos hacer 3 layers en vez de 2, tenemos **Player, Ball, Brick**, y en los ladrillos hacemos que esperen a que alguien entre en su área para apagarlos o destruirlos como tal. En resumen, si un balón entra en su área de colisión, hacemos un **queue_free()** y llamaríamos al método de balón para que **rebote**.
 
 Finalmente, terminamos con la opción para generar el balón, un método para generar bloques de manera más numérica sin tener que estresarnos y hacerlo paso por paso. Terminamos de trabajar a las 08:15 p.m, y dejaremos para el día de mañana el trabajar con el movimiento del balón.
 
 Como último detalle, el movimiento del jugador puede que sea más interesante de lo esperado, y puede que llegue a ser algo complicado, ya que observando se puede denotar de posible existencia de ángulos.
 
+Mentira, decidí continuar el código, creamos el objeto Ball, acá creamos un componente para Bounce, de modo que hay colisión horizontal, también aprendimos lo siguiente. **Matemáticamente es un Normal, la existencia para rebotar como tal, podemos determinar una distancia o un Vector de rebote, por ejemplo, acá podemos determinar la normal así**.
 
+* **Normal = (position - object-collided.position).normalized()**
+
+Definido una vez el Vector normalizado, o éste valor como tal, podemos entonces pasarlo al objeto como tal, de nuevo, un Vector2D también tiene función para rebotar, llamada .bounce, en éste caso, nosotros hicimos ésto:
+
+* **move_component.velocity = move_component.velocity.bounce(normal)**
+
+Finalmente, tenemos posibles casos de un bug a la hora de rebotar, pero lo dejaré por ahora para mañana, ya que estoy algo cansado.
 
 
 
